--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<span class="kris-photo"></span>
 				</div>
 				<h1>Hi. I'm Kris Sommer.</h1>
-				<p>I'm a full stack web developer</p>
+				<p>I'm a full stack web developer.</p>
 			</div>
 
 		<!-- Main -->
