--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<br />
 					may or may not seriously
 					<br />
-					break the universe</h2>
+					break the universe.</h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
