Adding first demo site.

--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
 		<!-- Main -->
 			<div id="main">
 
-				<header class="major container medium">
+				<!-- <header class="major container medium">
 					<h2>We conduct experiments that
 					<br />
 					may or may not seriously
 					<br />
 					break the universe.</h2>
-					<!--
-					<p>Tellus erat mauris ipsum fermentum<br />
-					etiam vivamus nunc nibh morbi.</p>
-					-->
-				</header>
+
+				</header> -->
 
 				<div class="latest-projects">
 					<h2>Latest Projects</h2>
@@ -43,13 +40,13 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="https://resturant-demo-ks.netlify.app" class="image icon solid"><img src="images/small-restaurant.jpg" alt="resturant webiste demo" /></a>
 						<div class="content">
-							<h3>The First Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Resturant</h3>
+							<p>Demo of a resturant website.</p>
 						</div>
 					</section>
-					<section class="feature right">
+					<!-- <section class="feature right">
 						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
 							<h3>The Second Thing</h3>
@@ -62,7 +59,7 @@
 							<h3>The Third Thing</h3>
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
 						</div>
-					</section>
+					</section> -->
 				</div>
 
 				<!--
@@ -208,13 +205,13 @@
 				</div>
 				-->
 
-				<footer class="major container medium">
+				<!-- <footer class="major container medium">
 					<h3>Get shady with science</h3>
 					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button">Join our crew</a></li>
 					</ul>
-				</footer>
+				</footer> -->
 
 			</div>
 
